--- a/package.json
+++ b/package.json
@@ -9,18 +9,59 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "@ai-sdk/google": "^0.0.17",
+    "@clerk/nextjs": "^5.1.2",
+    "@langchain/community": "^0.2.3",
+    "@neondatabase/serverless": "^0.9.3",
+    "@pinecone-database/doc-splitter": "^0.0.1",
+    "@pinecone-database/pinecone": "^2.2.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@ramonak/react-progress-bar": "^5.2.0",
+    "@tanstack/react-query": "^5.40.0",
+    "@types/md5": "^2.3.5",
+    "@uploadthing/react": "^6.6.0",
+    "ai": "^3.1.16",
+    "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cohere-ai": "^7.10.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.10",
+    "embla-carousel-react": "^8.1.3",
+    "framer-motion": "^11.2.6",
+    "github-markdown-css": "^5.5.1",
+    "langchain": "^0.2.2",
+    "lucide": "^0.379.0",
+    "lucide-react": "^0.379.0",
+    "md5": "^2.3.0",
+    "mermaid": "^10.9.1",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "14.2.3",
+    "next-themes": "^0.3.0",
+    "pdf-parse": "^1.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "simplex-noise": "^4.0.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "drizzle-kit": "^0.21.4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
